<resources>
    <string name="error_generic">An error occurred.</string>
    <string name="error_network">A network error occurred! Please check your connection and try again!</string>
    <string name="error_empty">This cannot be empty.</string>
    <string name="error_invalid_domain">Invalid domain entered</string>
    <string name="error_failed_app_registration">Failed authenticating with that instance.</string>
    <string name="error_no_web_browser_found">Couldn\'t find a web browser to use.</string>
    <string name="error_authorization_unknown">An unidentified authorization error occurred.</string>
    <string name="error_authorization_denied">Authorization was denied.</string>
    <string name="error_retrieving_oauth_token">Failed getting a login token.</string>
    <string name="error_compose_character_limit">The status is too long!</string>
    <string name="error_image_upload_size">The file must be less than 8MB.</string>
    <string name="error_video_upload_size">Video files must be less than 40MB.</string>
    <string name="error_media_upload_type">That type of file cannot be uploaded.</string>
    <string name="error_media_upload_opening">That file could not be opened.</string>
    <string name="error_media_upload_permission">Permission to read media is required.</string>
    <string name="error_media_download_permission">Permission to store media is required.</string>
    <string name="error_media_upload_image_or_video">Images and videos cannot both be attached to the same status.</string>
    <string name="error_media_upload_sending">The upload failed.</string>
    <string name="error_report_too_few_statuses">At least one status must be reported.</string>
    <string name="error_invalid_regex">Invalid regular expression</string>
    <string name="error_sender_account_gone">Error sending toot.</string>
    <string name="title_home">Home</string>
    <string name="title_advanced">Advanced</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_public_local">Local</string>
    <string name="title_public_federated">Federated</string>
    <string name="title_direct_messages">Direct Messages</string>
    <string name="title_tab_preferences">Tabs</string>
    <string name="title_view_thread">Toot</string>
    <string name="title_tag">#%s</string>
    <string name="title_statuses">Posts</string>
    <string name="title_statuses_with_replies">With replies</string>
    <string name="title_statuses_pinned">Pinned</string>
    <string name="title_follows">Follows</string>
    <string name="title_followers">Followers</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_mutes">Muted users</string>
    <string name="title_blocks">Blocked users</string>
    <string name="title_follow_requests">Follow Requests</string>
    <string name="title_edit_profile">Edit your profile</string>
    <string name="title_saved_toot">Drafts</string>
    <string name="title_licenses">Licenses</string>
    <string name="status_username_format">\@%s</string>
    <string name="status_boosted_format">%s boosted</string>
    <string name="status_sensitive_media_title">Sensitive content</string>
    <string name="status_media_hidden_title">Media hidden</string>
    <string name="status_sensitive_media_directions">Click to view</string>
    <string name="status_content_warning_show_more">Show More</string>
    <string name="status_content_warning_show_less">Show Less</string>
    <string name="status_content_show_more">Expand</string>
    <string name="status_content_show_less">Collapse</string>
    <string name="message_empty">Nothing here.</string>
    <string name="footer_empty">Nothing here. Pull down to refresh!</string>
    <string name="notification_reblog_format">%s boosted your toot</string>
    <string name="notification_favourite_format">%s favourited your toot</string>
    <string name="notification_follow_format">%s followed you</string>
    <string name="report_username_format">Report @%s</string>
    <string name="report_comment_hint">Additional comments?</string>
    <string name="action_quick_reply">Quick Reply</string>
    <string name="action_reply">Reply</string>
    <string name="action_reblog">Boost</string>
    <string name="action_unreblog">Remove boost</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_unfavourite">Remove favourite</string>
    <string name="action_more">More</string>
    <string name="action_compose">Compose</string>
    <string name="action_login">Login with Mastodon</string>
    <string name="action_logout">Log Out</string>
    <string name="action_logout_confirm">Are you sure you want to log out of the account %1$s?</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_block">Block</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_hide_reblogs">Hide boosts</string>
    <string name="action_show_reblogs">Show boosts</string>
    <string name="action_report">Report</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="delete_and_edit">Delete and Edit</string>
    <string name="action_send">TOOT</string>
    <string name="action_send_public">TOOT!</string>
    <string name="action_retry">Retry</string>
    <string name="action_close">Close</string>
    <string name="action_view_profile">Profile</string>
    <string name="action_view_preferences">Preferences</string>
    <string name="action_view_account_preferences">Account Preferences</string>
    <string name="action_view_favourites">Favourites</string>
    <string name="action_view_mutes">Muted users</string>
    <string name="action_view_blocks">Blocked users</string>
    <string name="action_view_follow_requests">Follow Requests</string>
    <string name="action_view_media">Media</string>
    <string name="action_open_in_web">Open in browser</string>
    <string name="action_add_media">Add media</string>
    <string name="action_photo_take">Take photo</string>
    <string name="action_share">Share</string>
    <string name="action_mute">Mute</string>
    <string name="action_unmute">Unmute</string>
    <string name="action_mention">Mention</string>
    <string name="action_hide_media">Hide media</string>
    <string name="action_open_drawer">Open drawer</string>
    <string name="action_save">Save</string>
    <string name="action_edit_profile">Edit profile</string>
    <string name="action_edit_own_profile">Edit</string>
    <string name="action_undo">Undo</string>
    <string name="action_accept">Accept</string>
    <string name="action_reject">Reject</string>
    <string name="action_search">Search</string>
    <string name="action_access_saved_toot">Drafts</string>
    <string name="action_access_scheduled_toot">Scheduled toots</string>
    <string name="action_toggle_visibility">Toot visibility</string>
    <string name="action_content_warning">Content warning</string>
    <string name="action_emoji_keyboard">Emoji keyboard</string>
    <string name="action_schedule_toot">Schedule Toot</string>
    <string name="action_reset_schedule">Reset</string>
    <string name="action_add_tab">Add Tab</string>
    <string name="action_links">Links</string>
    <string name="action_mentions">Mentions</string>
    <string name="action_hashtags">Hashtags</string>
    <string name="action_open_reblogger">Open boost author</string>
    <string name="action_open_reblogged_by">Show boosts</string>
    <string name="action_open_faved_by">Show favourites</string>
    <string name="title_hashtags_dialog">Hashtags</string>
    <string name="title_mentions_dialog">Mentions</string>
    <string name="title_links_dialog">Links</string>
    <string name="action_open_media_n">Open media #%d</string>
    <string name="download_image">Downloading %1$s</string>
    <string name="action_copy_link">Copy the link</string>
    <string name="action_open_as">Open as %s</string>
    <string name="action_share_as">Share as …</string>
    <string name="download_media">Download media</string>
    <string name="downloading_media">Downloading media</string>
    <string name="send_status_link_to">Share toot URL to…</string>
    <string name="send_status_content_to">Share toot to…</string>
    <string name="send_media_to">Share media to…</string>
    <string name="confirmation_reported">Sent!</string>
    <string name="confirmation_unblocked">User unblocked</string>
    <string name="confirmation_unmuted">User unmuted</string>
    <string name="status_sent">Sent!</string>
    <string name="status_sent_long">Reply sent successfully.</string>
    <string name="hint_domain">Which instance?</string>
    <string name="hint_compose">What\'s happening?</string>
    <string name="hint_content_warning">Content warning</string>
    <string name="hint_display_name">Display name</string>
    <string name="hint_note">Bio</string>
    <string name="hint_search">Search…</string>
    <string name="search_no_results">No results</string>
    <string name="label_quick_reply">Reply…</string>
    <string name="label_avatar">Avatar</string>
    <string name="label_header">Header</string>
    <string name="link_whats_an_instance">What\'s an instance?</string>
    <string name="login_connection">Connecting…</string>
    <string name="dialog_whats_an_instance">The address or domain of any instance can be entered
        here, such as mastodon.social, icosahedron.website, social.tchncs.de, and
        <a href="https://instances.social">more!</a>
        \n\nIf you don\'t yet have an account, you can enter the name of the instance you\'d like to
        join and create an account there.\n\nAn instance is a single place where your account is
        hosted, but you can easily communicate with and follow folks on other instances as though
        you were on the same site.
        \n\nMore info can be found at <a href="https://joinmastodon.org">joinmastodon.org</a>.
    </string>
    <string name="dialog_title_finishing_media_upload">Finishing Media Upload</string>
    <string name="dialog_message_uploading_media">Uploading…</string>
    <string name="dialog_download_image">Download</string>
    <string name="dialog_message_cancel_follow_request">Revoke the follow request?</string>
    <string name="dialog_unfollow_warning">Unfollow this account?</string>
    <string name="dialog_delete_toot_warning">Delete this toot?</string>
    <string name="dialog_edit_toot_warning">Delete and edit this toot?</string>
    <string name="visibility_public">Public: Post to public timelines</string>
    <string name="visibility_unlisted">Unlisted: Do not show in public timelines</string>
    <string name="visibility_private">Followers-Only: Post to followers only</string>
    <string name="visibility_direct">Direct: Post to mentioned users only</string>
    <string name="pref_title_notification_settings">Notifications</string>
    <string name="pref_title_edit_notification_settings">Notifications</string>
    <string name="pref_title_notifications_enabled">Notifications</string>
    <string name="pref_summary_notifications">for account %1$s</string>
    <string name="pref_title_notification_alerts">Alerts</string>
    <string name="pref_title_notification_alert_sound">Notify with a sound</string>
    <string name="pref_title_notification_alert_vibrate">Notify with vibration</string>
    <string name="pref_title_notification_alert_light">Notify with light</string>
    <string name="pref_title_notification_filters">Notify me when</string>
    <string name="pref_title_notification_filter_mentions">mentioned</string>
    <string name="toot_area_hint">Quick Toot Area</string>
    <string name="hint_access_token">Access Token</string>
    <string name="button_authorize">Authorize Now!</string>
    <string name="quote_status_media_notice">This toot has %d media(s).</string>
</resources>