<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/quote_inline_frame"
    android:gravity="center_vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingEnd="8dp"
    android:paddingStart="8dp"
    android:visibility="gone"
    tools:visibility="visible" >

    <com.keylesspalace.tusky.view.RoundedImageView
        android:id="@+id/status_quote_inline_avatar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@null"
        tools:src="@drawable/avatar_default" />

    <androidx.emoji.widget.EmojiTextView
        android:id="@+id/status_quote_inline_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/status_quote_inline_avatar"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="4dp"
        android:paddingEnd="@dimen/status_display_name_padding_end"
        android:textColor="?android:textColorPrimary"
        android:textSize="?attr/status_text_medium"
        android:textStyle="normal|bold"
        tools:text="Ente" />

    <TextView
        android:id="@+id/status_quote_inline_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/status_quote_inline_display_name"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="?android:textColorSecondary"
        android:textSize="?attr/status_text_medium"
        tools:text="\@Entenhausen" />

    <androidx.emoji.widget.EmojiTextView
        android:id="@+id/status_quote_inline_content_warning_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/status_quote_inline_avatar"
        android:layout_marginTop="8dp"
        android:lineSpacingMultiplier="1.1"
        android:textColor="?android:textColorPrimary"
        android:textSize="?attr/status_text_medium"
        android:visibility="gone"
        tools:text="CW"
        tools:visibility="visible" />

    <ToggleButton
        android:id="@+id/status_quote_inline_content_warning_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/status_quote_inline_avatar"
        android:layout_toEndOf="@+id/status_quote_inline_content_warning_description"
        android:background="?attr/content_warning_button"
        android:minWidth="150dp"
        android:minHeight="0dp"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp"
        android:textAllCaps="true"
        android:textOff="@string/status_content_warning_show_more"
        android:textOn="@string/status_content_warning_show_less"
        android:textSize="?attr/status_text_medium"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.emoji.widget.EmojiTextView
        android:id="@+id/status_quote_inline_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_quote_inline_content_warning_button"
        android:focusable="true"
        android:lineSpacingMultiplier="1.1"
        android:maxLines="8"
        android:textColor="?android:textColorPrimary"
        android:textSize="?attr/status_text_medium"
        tools:text="This is a status" />

    <TextView
        android:id="@+id/status_quote_inline_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_quote_inline_content"
        android:textColor="?android:textColorHint"
        android:text="@string/quote_status_media_notice"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>